--- a/css/about.css
+++ b/css/about.css
@@ -48,6 +48,7 @@ footer {
     background-color: black;
     padding: 20px;
     display:block;
+    margin-bottom:-2px;
     }
 .footertext {
     color:white;
@@ -59,8 +60,8 @@ body {
     background-color: blanchedalmond;
 }
 .timbuktu {
-    width: 300px;
-    height: 300px;  
+    width: 500px;
+    height: 500px;  
     display: inline-block;
 }
 .float-left {
